# letoctf-platform

./: .gitignore  README.md  pyproject.toml
backend/: admin.py  settings.py  urls.py
backend/auth/: urls.py
backend/auth/jwt/: apps.py  urls.py
backend/auth/telegram/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/challenge/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/challenge/migrations/: 0001_initial.py  0002_initial.py  0003_challenge_regexp.py  0004_alter_submission_correct.py  0005_remove_challenge_dynamic_challenge_review_and_more.py  0006_alter_challenge_active_alter_challenge_end_and_more.py
backend/event/: admin.py  models.py  serializers.py  urls.py  views.py
backend/event/migrations/: 0001_initial.py  0002_feedback.py  0003_alter_feedback_score_alter_feedback_user.py  0004_alter_feedback_text.py
backend/notifications/: admin.py  models.py  serializers.py  urls.py  views.py
backend/notifications/migrations/: 0001_initial.py  0002_alter_notification_type.py  0003_alter_notification_active_alter_notification_end_and_more.py
backend/statistics/: apps.py  serializers.py  urls.py  views.py
backend/storage/: admin.py  apps.py  client.py  models.py  serializers.py
backend/storage/migrations/: 0001_initial.py
backend/user/: admin.py  models.py  serializers.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py  0002_alter_user_username.py  (+1 more)
deploy/: Dockerfile  create-bucket.sh  docker-compose.yaml  entrypoint.sh
deploy/config/: .env.sample  nginx.conf
docs/: openapi.yaml
(+2 files in other folders)
